--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -4,7 +4,25 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <AssemblyName>LightestNight.System.EventSourcing.SqlStreamStore</AssemblyName>
         <RootNamespace>LightestNight.System.EventSourcing.SqlStreamStore</RootNamespace>
+        <LangVersion>latest</LangVersion>
+        <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <PackageId>LightestNight.System.EventSourcing.SqlStreamStore</PackageId>
+        <Authors>James Woodley</Authors>
+        <Company>LightestNight Ltd</Company>
+        <Title>LightestNight :: System :: Event Sourcing :: Sql Stream Store</Title>
+        <Description>Core elements to enable Event Sourcing paradigms using the Sql Stream Store framework</Description>
+        <PackageTags>lightestnight;system;infrastructure;event;event sourcing;domain driven design;cqrs;sql stream store;</PackageTags>
+        <Version>1.0.0</Version>
+        <PackageVersion>1.0.0</PackageVersion>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <FileVersion>1.0.0</FileVersion>
+        <InformationalVersion>1.0.0</InformationalVersion>
+        <PackageIcon>icon.jpeg</PackageIcon>
+        <RepositoryUrl>https://github.com/lightestnight/system.eventsourcing.sqlstreamstore</RepositoryUrl>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -20,6 +38,13 @@
       <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.3" />
       <PackageReference Include="SqlStreamStore" Version="1.1.3" />
       <PackageReference Include="System.Text.Json" Version="4.7.1" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <None Include="..\icon.jpeg">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
     </ItemGroup>
 
 </Project>
