--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -36,7 +36,7 @@
     <ItemGroup>
       <PackageReference Include="LightestNight.System.EventSourcing" Version="1.6.5" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.3" />
-      <PackageReference Include="SqlStreamStore" Version="1.1.3" />
+      <PackageReference Include="SqlStreamStore" Version="1.2.0-beta.8" />
       <PackageReference Include="System.Text.Json" Version="4.7.1" />
     </ItemGroup>
     
