--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -27,17 +27,20 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <NoWarn>1701;1702;CA1303</NoWarn>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <NoWarn>1701;1702;CA1303</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="LightestNight.System.EventSourcing" Version="1.7.7" />
-      <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.3" />
+      <PackageReference Include="LightestNight.System.EventSourcing" Version="1.7.8" />
+      <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.4" />
       <PackageReference Include="SqlStreamStore" Version="1.2.0-beta.8" />
-      <PackageReference Include="System.Text.Json" Version="4.7.1" />
+      <PackageReference Include="System.Text.Json" Version="4.7.2" />
     </ItemGroup>
     
     <ItemGroup>
