--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -39,7 +39,7 @@
       <PackageReference Include="LightestNight.System.EventSourcing" Version="1.8.1" />
       <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.4" />
-      <PackageReference Include="SqlStreamStore" Version="1.1.3" />
+      <PackageReference Include="SqlStreamStore" Version="1.2.0-beta.8" />
       <PackageReference Include="System.Text.Json" Version="4.7.2" />
     </ItemGroup>
     
