--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -23,6 +23,7 @@
         <InformationalVersion>1.0.0</InformationalVersion>
         <PackageIcon>icon.jpeg</PackageIcon>
         <RepositoryUrl>https://github.com/lightestnight/system.eventsourcing.sqlstreamstore</RepositoryUrl>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -36,14 +37,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="LightestNight.System.EventSourcing" Version="1.8.12" />
-      <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.4" />
-      <PackageReference Include="SqlStreamStore" Version="1.2.0-beta.8" />
+      <PackageReference Include="LightestNight.System.EventSourcing" Version="1.10.0-alpha0003" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.6" />
+      <PackageReference Include="SqlStreamStore" Version="1.2.0" />
       <PackageReference Include="System.Text.Json" Version="4.7.2" />
     </ItemGroup>
     
     <ItemGroup>
         <None Include="..\icon.jpeg">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="..\LICENSE">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
