--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -41,6 +41,7 @@
       <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.7" />
       <PackageReference Include="SqlStreamStore" Version="1.2.0" />
       <PackageReference Include="System.Text.Json" Version="4.7.2" />
+      <PackageReference Include="Utf8Json" Version="1.3.7" />
     </ItemGroup>
     
     <ItemGroup>
