Use tags as new release trigger

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,13 @@
 name: CI
 
 on:
-  push:    
+  push:
+    branches:
+      - feature/**
+      - hotfix/**
+      - develop
+      - master
+  
     pull_request:
       branches:
         - develop
