--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -2,8 +2,10 @@ name: Release
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - master
+      - develop
+      - hotfix/**
 
 jobs:
   build:
