--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -37,7 +37,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="LightestNight.System.EventSourcing" Version="3.8.0" />
+      <PackageReference Include="LightestNight.System.EventSourcing" Version="3.9.0-alpha0002" />
       <PackageReference Include="SqlStreamStore" Version="1.2.0" />
     </ItemGroup>
     
